--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
+    "simplebar": "^6.2.5",
+    "simplebar-react": "^3.2.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
