--- a/package.json
+++ b/package.json
@@ -35,10 +35,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +60,9 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
     "@types/react-datepicker": "^4.11.2",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "customize-cra": "^1.0.0",
+    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.3.2"
   }
 }
